--- a/publications.html
+++ b/publications.html
@@ -47,7 +47,7 @@ title: Remy Muller
                     + '<a href="' + docs[i].uri_s + '">' + docs[i].title_s + '</a>, '
                     + '<i>' + docs[i].conferenceTitle_s + '</i>, ' 
                     + docs[i].producedDateY_i
-                    +'</div>'
+                    +'</div></br>'
                 }
                 out += ""
                 document.getElementById("Publications").innerHTML = out;
