--- a/publications.html
+++ b/publications.html
@@ -23,6 +23,8 @@ title: Remy Muller
 
             function format_json(text) 
             {
+                // TODO: bibtex for each entry, direct pdf download, grouping per year
+
                 var json_data = JSON.parse(text);
                 var docs = json_data.response.docs
                 var out = "";
