--- a/publications.html
+++ b/publications.html
@@ -48,7 +48,8 @@ title: Remy Muller
                 var doc_types = [
                     ["COMM", "Conference Publications"], 
                     ["POSTER", "Poster"], 
-                    ["REPORT", "Reports"]
+                    ["REPORT", "Reports"],
+                    ["THESE", "Thesis"]
                 ];
                 out += ""
                 for(j=0; j<doc_types.length; ++j)
